--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Lost-Letter</title>
+    
 </head>
 <body>
-    
+    <header> </header>
+
+    <article class="Jogar">
+        <a href="">Jogar</a>
+    </article>
 </body>
 </html>
