--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,6 +11,7 @@
     <header> </header>
 
     <article class="Jogar">
+        <img src="../../assets/Lost-Letter Logo.png" alt="Logo Lost-Letter" height="400px" width="400px">
         <a href="">Jogar</a>
     </article>
 </body>
