coloquei uma ancora

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <img src="../../assets/Lost-Letter Logo PNG.png" alt="Logo Lost-Letter clicável, que direciona para o home">    
+        <a href="">
+            <img src="../../assets/Lost-Letter Logo PNG.png" alt="Logo Lost-Letter clicável, que direciona para o home">  
+        </a>  
     </header>
 
     
