--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -4,15 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="cadastro.css" class="css">
     <title>Lost-Letter Login</title>
 </head>
 <body>
     <header>
         <a href="">
-            <img src="../../assets/Lost-Letter Logo PNG.png" alt="Logo Lost-Letter clicável, que direciona para o home">  
+            <img src="../../assets/Lost-Letter Logo PNG.png" 
+            alt="Logo Lost-Letter clicável, que direciona para o home">  
         </a>  
     </header>
 
+    <img src="/assets/seta.png" alt="">
+    
+    <div class="cadastro">
+        <ul class="dados">
+            <li><h3>Nick</h3>
+            <input type="text">
+            </li>
+            <li><h3>E-mail</h3>
+            <input type="email">
+            </li>
+            <li><h3>Senha</h3>
+            <input type="password">
+            </li>
+        </ul>
+        <button class="avançar">Avançar</button>
+    </div>
     
 </body>
 </html>
