--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/login.css">
-    <link rel="stylesheet" href="cadastro.css" class="css">
+    <link rel="stylesheet" href="/src/css/cadastro.css" class="css">
     <title>Lost-Letter Login</title>
 </head>
 <body>
