--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/cadastro.css">
-    <title>Lost-Letter Login</title>
+    <title>Lost-Letter cadastro</title>
 </head>
 <body>
     <header>
         <a href="">
-            <img src="../../assets/Lost-Letter Logo PNG.png" 
-            alt="Logo Lost-Letter clicável, que direciona para o home">  
+            <img src="/assets/Logo/Lost-Letter Logo PNG.png" 
+            alt="Logo Lost-Letter clicável, que direciona para o home">
         </a>  
     </header>
 
