--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,8 +11,8 @@
     <header> </header>
 
     <article class="Jogar">
-        <img src="../../assets/Lost-Letter Logo.png" alt="Logo Lost-Letter" height="400px" width="400px">
-        <a href="">Jogar</a>
+        <img src="../../assets/Logo/Lost-Letter Logo.png" alt="Logo Lost-Letter" height="400px" width="400px">
+        <a href="login.html">Jogar</a>
     </article>
 </body>
 </html>
