--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <a href="">
-            <img src="../../assets/Lost-Letter Logo PNG.png" alt="Logo Lost-Letter clicável, que direciona para o home">  
+        <a href="index.html">
+            <img src="../../assets/logo/Lost-Letter Logo PNG.png" alt="Logo Lost-Letter clicável, que direciona para o home">  
         </a>  
     </header>
 
