coloquei as ancoras

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -21,6 +21,15 @@
             <li><h3>Senha</h3>
             <input type="password">
             </li>
+            
+            <div class="ancoras">
+                <li>
+                    <a href="">Esqueceu a senha?</a>
+                </li>
+                <li>
+                    <a href="cadastro.html">Não possue Cadastro?</a>
+                </li>
+            </div>
         </ul>
         <button class="avançar">Avançar</button>
     </div>
