--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="">
+        <a href="index.html">
             <img src="/assets/Logo/Lost-Letter Logo PNG.png" 
             alt="Logo Lost-Letter clicável, que direciona para o home">
         </a>  
