realizei a parte de cadastro

--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -9,27 +9,33 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="/assets/Logo/Lost-Letter Logo PNG.png" 
-            alt="Logo Lost-Letter clicável, que direciona para o home">
+            <img src="/assets/Logo/Lost-Letter Logo PNG.png" alt="Logo Lost-Letter clicável, que direciona para o home">
         </a>  
     </header>
 
-    <img src="/assets/seta.png" alt="">
-    
-    <div class="cadastro">
-        <ul class="dados">
-            <li><h3>Nick</h3>
-            <input type="text">
-            </li>
-            <li><h3>E-mail</h3>
-            <input type="email">
-            </li>
-            <li><h3>Senha</h3>
-            <input type="password">
-            </li>
-        </ul>
-        <button class="avançar">Avançar</button>
+
+    <div class="bodygeral">
+        <a href="login.html">
+            <img src="/assets/seta.png" alt="">
+        </a>
+        <div class="cadastro">
+            <ul class="dados">
+                <li><h3>Nick</h3>
+                <input type="text">
+                </li>
+                <li><h3>E-mail</h3>
+                <input type="email">
+                </li>
+                <li><h3>Senha</h3>
+                <input type="password">
+                </li>
+            </ul>
+            <button class="avançar">Avançar</button>
+        </div>
     </div>
-    
+
+    <footer> 
+        <p>© 2025 Lost-Letter. Todos os direitos reservados.</p> 
+    </footer>
 </body>
 </html>
