--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -14,17 +14,19 @@
     </header>
 
     <div class="bodygeral">
-        <a href="">
-            <img src="../../assets/seta.png" alt="seta de voltar">
-        </a>
+        <div class="seta-voltar">
+            <a href="index.html">
+                <img src="../../assets/seta.png" alt="Seta de voltar">
+            </a>
+        </div>
+
         <div class="login">
-            
             <ul class="dados">
                 <li><h3>E-mail</h3>
-                <input type="email">
+                    <input type="email">
                 </li>
                 <li><h3>Senha</h3>
-                <input type="password">
+                    <input type="password">
                 </li>
                 
                 <div class="ancoras">
