Deixei o Cadastro e o Login no mesmo estilo
utilizei htmls e CSS's parecidos em ambas páginas

--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -14,25 +14,30 @@
     </header>
 
 
-    <div class="bodygeral">
-        <a href="login.html">
-            <img src="/assets/seta.png" alt="">
-        </a>
-        <div class="cadastro">
-            <ul class="dados">
-                <li><h3>Nick</h3>
-                <input type="text">
-                </li>
-                <li><h3>E-mail</h3>
-                <input type="email">
-                </li>
-                <li><h3>Senha</h3>
-                <input type="password">
-                </li>
-            </ul>
-            <button class="avançar">Avançar</button>
+
+   <section class="alinhar-seta">
+        <div class="seta-voltar">
+            <a href="login.html">
+                <img src="../../assets/seta.png" alt="Seta de voltar">
+            </a>
         </div>
-    </div>
+        <div class="bodygeral">
+            <div class="cadastro">
+                <ul class="dados">
+                    <li><h3>Nick</h3>
+                    <input type="text">
+                    </li>
+                    <li><h3>E-mail</h3>
+                    <input type="email">
+                    </li>
+                    <li><h3>Senha</h3>
+                    <input type="password">
+                    </li>
+                </ul>
+                <button class="avançar">Avançar</button>
+            </div>
+        </div>
+    </section>
 
     <footer> 
         <p>© 2025 Lost-Letter. Todos os direitos reservados.</p> 
