melhorei a estilização do site, colocando cores azuis e alterando o fundo da logo

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,11 +8,17 @@
     
 </head>
 <body>
-    <header> </header>
+    <header>  </header>
 
-    <article class="Jogar">
-        <img src="../../assets/Logo/Lost-Letter Logo.png" alt="Logo Lost-Letter" height="400px" width="400px">
-        <a href="login.html">Jogar</a>
-    </article>
+    <section class="logo-jogar">
+        <article class="Jogar">
+            <img src="../../assets/Logo/Lost-Letter Logo PNG.png" alt="Logo Lost-Letter" height="400px" width="400px">
+            <a href="login.html">Jogar</a>
+        </article>
+    </section>
+
+     <footer> 
+        <p>© 2025 Lost-Letter. Todos os direitos reservados.</p> 
+    </footer>
 </body>
 </html>
