colocando "required" cadastro.html

--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -19,13 +19,13 @@
     <div class="cadastro">
         <ul class="dados">
             <li><h3>Nick</h3>
-            <input type="text">
+            <input type="text" required>
             </li>
             <li><h3>E-mail</h3>
-            <input type="email">
+            <input type="email" required>
             </li>
             <li><h3>Senha</h3>
-            <input type="password">
+            <input type="password" required>
             </li>
         </ul>
         <button class="avançar">Avançar</button>
