colocando"required"esqueci_senha.html

--- a/src/pages/esqueci_senha.html
+++ b/src/pages/esqueci_senha.html
@@ -28,7 +28,7 @@
             <div class="cadastro">
                 <ul class="dados">
                     <li><h3>E-mail</h3>
-                    <input type="email">
+                    <input type="email" required>
                     </li> 
                 </ul>
                 <button class="avançar">Avançar</button>
