--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -1,35 +1,50 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/cadastro.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hind+Madurai:wght@300;400;500;600;700&family=Oswald:wght@200..700&family=Poetsen+One&display=swap" rel="stylesheet">
     <title>Lost-Letter cadastro</title>
 </head>
 <body>
     <header>
-        <a href="">
-            <img src="/assets/Logo/Lost-Letter Logo PNG.png" 
-            alt="Logo Lost-Letter clicável, que direciona para o home">
+        <a href="index.html">
+            <img src="/assets/Logo/Lost-Letter Logo PNG.png" alt="Logo Lost-Letter clicável, que direciona para o home">
         </a>  
     </header>
 
-    <img src="/assets/seta.png" alt="">
-    
-    <div class="cadastro">
-        <ul class="dados">
-            <li><h3>Nick</h3>
-            <input type="text" required>
-            </li>
-            <li><h3>E-mail</h3>
-            <input type="email" required>
-            </li>
-            <li><h3>Senha</h3>
-            <input type="password" required>
-            </li>
-        </ul>
-        <button class="avançar">Avançar</button>
-    </div>
-    
+
+
+   <section class="alinhar-seta">
+        <div class="seta-voltar">
+            <a href="login.html">
+                <img src="../../assets/seta.png" alt="Seta de voltar">
+            </a>
+        </div>
+        <div class="bodygeral">
+            <div class="cadastro">
+                <ul class="dados">
+                    <li><h3>Nick</h3>
+                    <input type="text">
+                    </li>
+                    <li><h3>E-mail</h3>
+                    <input type="email">
+                    </li>
+                    <li><h3>Senha</h3>
+                    <input type="password">
+                    </li>
+                </ul>
+                <button class="avançar">Avançar</button>
+            </div>
+        </div>
+    </section>
+
+    <footer> 
+        <p>© 2025 Lost-Letter. Todos os direitos reservados.</p> 
+    </footer>
 </body>
 </html>
