--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -29,13 +29,13 @@
             <div class="cadastro">
                 <ul class="dados">
                     <li><h3>Nick</h3>
-                    <input type="text">
+                    <input type="text" id="nick" required>
                     </li>
                     <li><h3>E-mail</h3>
-                    <input type="email">
+                    <input type="email"  id="email" required>
                     </li>
                     <li><h3>Senha</h3>
-                    <input type="password">
+                    <input type="password" id="senha" required>
                     </li>
                 </ul>
                 <button class="avançar">Avançar</button>
@@ -46,5 +46,8 @@
     <footer> 
         <p>© 2025 Lost-Letter. Todos os direitos reservados.</p> 
     </footer>
+
+    <script src="/src/js/cadastro.js"></script>
+
 </body>
 </html>
