--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -26,7 +26,7 @@
             </a>
         </div>
         <div class="bodygeral">
-            <div class="cadastro">
+            <form action="" class="cadastro">
                 <ul class="dados">
                     <li><h3>Nick</h3>
                     <input type="text" id="nick" required>
@@ -40,7 +40,7 @@
                     </li>
                 </ul>
                 <button class="avançar">Avançar</button>
-            </div>
+            </form>
         </div>
     </section>
 
