Comecei a estilizar o Jogo

--- a/src/pages/forca.html
+++ b/src/pages/forca.html
@@ -7,13 +7,22 @@
 
 </head>
 <body>
-  <h1>Jogo da Forca</h1>
-  <img id="imagem-forca" src="../../assets/forca/img1.png" alt="Imagem da Forca" width="200" />
-  <div id="palavra"></div>
-  <div id="letras-chutadas"></div>
-  <div id="teclado"></div>
-  <div id="mensagem"></div>
-  <button id="novo-jogo">Novo Jogo</button>
+ 
+  <header>
+        <a href="index.html">
+            <img src="../../assets/logo/Lost-Letter Logo PNG.png" alt="Logo Lost-Letter clicável, que direciona para o home">  
+        </a>  
+    </header>
+
+
+  <div class="game">
+    <img id="imagem-forca" src="../../assets/forca/img1.png" alt="Imagem da Forca" width="200" />
+    <div id="palavra"></div>
+    <div id="letras-chutadas"></div>
+    <div id="teclado"></div>
+    <div id="mensagem"></div>
+    <button id="novo-jogo">Novo Jogo</button>
+  </div>
   <script src="../js/forca.js"></script>
 </body>
 </html>
