--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -36,7 +36,7 @@
                             <input type="password" id="senha" required>
                         </li>
                     </ul>
-                    <button type="submit" class="avançar">Avançar</button>
+                    <button type="submit" class="avançar">Cadastrar</button>
                 </form>
             </div>
         </div>
