--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -4,50 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/login.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hind+Madurai:wght@300;400;500;600;700&family=Oswald:wght@200..700&family=Poetsen+One&display=swap" rel="stylesheet">
     <title>Lost-Letter Login</title>
 </head>
 <body>
     <header>
         <a href="index.html">
-            <img src="../../assets/logo/Lost-Letter Logo PNG.png" alt="Logo Lost-Letter clicável, que direciona para o home">  
+            <img src="../../assets/logo/Lost-Letter Logo PNG.png" alt="Logo Lost-Letter clicável">
         </a>  
     </header>
 
     <section class="alinhar-seta">
         <div class="seta-voltar">
-                <a href="index.html">
-                    <img src="../../assets/seta.png" alt="Seta de voltar">
-                </a>
-            </div>
+            <a href="index.html">
+                <img src="../../assets/seta.png" alt="Seta de voltar">
+            </a>
+        </div>
         <div class="bodygeral">
             <div class="login">
-                <ul class="dados">
-                    <li><h3>E-mail</h3>
-                        <input type="email">
-                    </li>
-                    <li><h3>Senha</h3>
-                        <input type="password">
-                    </li>
-                    
-                    <div class="ancoras">
-                        <li>
-                            <a href="">Esqueceu a senha?</a>
+                <form id="loginForm">
+                    <ul class="dados">
+                        <li><h3>E-mail</h3>
+                            <input type="email" id="email" required>
                         </li>
-                        <li>
-                            <a href="cadastro.html">Não possue Cadastro?</a>
+                        <li><h3>Senha</h3>
+                            <input type="password" id="senha" required>
                         </li>
-                    </div>
-                </ul>
-                <button class="avançar">Avançar</button>
+                        <div class="ancoras">
+                            <li><a href="">Esqueceu a senha?</a></li>
+                            <li><a href="cadastro.html">Não possui Cadastro?</a></li>
+                        </div>
+                    </ul>
+                    <button type="submit" class="avançar">Avançar</button>
+                </form>
             </div>
         </div>
     </section>
-      
-    <footer> 
-        <p>© 2025 Lost-Letter. Todos os direitos reservados.</p> 
+
+    <footer>  
+        <p>© 2025 Lost-Letter. Todos os direitos reservados.</p>  
     </footer>
+
+    <script src="../src/js/login.js"></script>
 </body>
 </html>
