Revert "Merge branch 'clautávio' into mexendo-no-código---Cláudio"
This reverts commit 6d61dc3244a4e94930085042962a89d563f24579, reversing
changes made to 506a983fcac434d37e9362c338cfbda2c4f076c6.

--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -26,29 +25,25 @@
             </a>
         </div>
         <div class="bodygeral">
-            <form action="" class="cadastro">
+            <div class="cadastro">
                 <ul class="dados">
                     <li><h3>Nick</h3>
-                    <input type="text" id="nick" required>
+                    <input type="text">
                     </li>
                     <li><h3>E-mail</h3>
-                    <input type="email"  id="email" required>
+                    <input type="email">
                     </li>
                     <li><h3>Senha</h3>
-                    <input type="password" id="senha" required>
-
+                    <input type="password">
                     </li>
                 </ul>
                 <button class="avançar">Avançar</button>
-            </form>
+            </div>
         </div>
     </section>
 
     <footer> 
         <p>© 2025 Lost-Letter. Todos os direitos reservados.</p> 
     </footer>
-
-    <script src="/src/js/cadastro.js"></script>
-
 </body>
 </html>
