--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -34,7 +34,7 @@
                     
                     <div class="ancoras">
                         <li>
-                            <a href="esqueci_senha.html">Esqueceu a senha?</a>
+                            <a href="">Esqueceu a senha?</a>
                         </li>
                         <li>
                             <a href="cadastro.html">Não possue Cadastro?</a>
