--- a/src/pages/forca.html
+++ b/src/pages/forca.html
@@ -7,22 +7,13 @@
 
 </head>
 <body>
- 
-  <header>
-        <a href="index.html">
-            <img src="../../assets/logo/Lost-Letter Logo PNG.png" alt="Logo Lost-Letter clicável, que direciona para o home">  
-        </a>  
-    </header>
-
-
-  <div class="game">
-    <img id="imagem-forca" src="../../assets/forca/img1.png" alt="Imagem da Forca" width="200" />
-    <div id="palavra"></div>
-    <div id="letras-chutadas"></div>
-    <div id="teclado"></div>
-    <div id="mensagem"></div>
-    <button id="novo-jogo">Novo Jogo</button>
-  </div>
+  <h1>Jogo da Forca</h1>
+  <img id="imagem-forca" src="../../assets/forca/img1.png" alt="Imagem da Forca" width="200" />
+  <div id="palavra"></div>
+  <div id="letras-chutadas"></div>
+  <div id="teclado"></div>
+  <div id="mensagem"></div>
+  <button id="novo-jogo">Novo Jogo</button>
   <script src="../js/forca.js"></script>
 </body>
 </html>
