--- a/src/pages/cadastro.html
+++ b/src/pages/cadastro.html
@@ -20,21 +20,25 @@
             </a>
         </div>
         <div class="bodygeral">
-            <form action="" class="cadastro">
-                <ul class="dados">
-                    <li><h3>Nick</h3>
-                    <input type="text" id="nick" required>
-                    </li>
-                    <li><h3>E-mail</h3>
-                    <input type="email"  id="email" required>
-                    </li>
-                    <li><h3>Senha</h3>
-                    <input type="password" id="senha" required>
-
-                    </li>
-                </ul>
-                <button class="avançar">Avançar</button>
-            </form>
+            <div class="cadastro">
+                <form id="cadastroForm">
+                    <ul>
+                        <li>
+                            <h3>Nick</h3>
+                            <input type="text" id="nick" required>
+                        </li>
+                        <li>
+                            <h3>E-mail</h3>
+                            <input type="email" id="email" required>
+                        </li>
+                        <li>
+                            <h3>Senha</h3>
+                            <input type="password" id="senha" required>
+                        </li>
+                    </ul>
+                    <button type="submit" class="avançar">Cadastrar</button>
+                </form>
+            </div>
         </div>
     </section>
 
