Concertei o sistema de login/cadastro

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -44,6 +44,6 @@
         <p>© 2025 Lost-Letter. Todos os direitos reservados.</p>  
     </footer>
 
-    <script src="../src/js/login.js"></script>
+    <script src="../js/login.js"></script>
 </body>
 </html>
