Aderi avaterers e pontuações no perfil

--- a/src/pages/forca.html
+++ b/src/pages/forca.html
@@ -9,16 +9,21 @@
 <body>
  
   <header>
-        <a href="index.html">
-            <img src="../../assets/logo/Lost-Letter Logo PNG.png" alt="Logo Lost-Letter clicável, que direciona para o home">  
-        </a>  
-    </header>
+    <a href="index.html">
+        <img src="../../assets/logo/Lost-Letter Logo PNG.png" alt="Logo Lost-Letter clicável, que direciona para o home">  
+    </a>  
+    <a href="perfil.html" class="perfil-link">
+        <img src="../../assets/3736502.png" alt="Perfil">
+    </a>
+</header>
 
 
   <div class="game">
-    <img id="imagem-forca" src="../../assets/forca/img1.png" alt="Imagem da Forca" width="200" />
-    <div id="palavra"></div>
-    <div id="letras-chutadas"></div>
+    <div class="forca-quadro">
+      <img id="imagem-forca" src="../../assets/forca/img1.png" alt="Imagem da Forca" width="200" />
+      <div id="palavra"></div>
+      <div id="letras-chutadas"></div>
+    </div>
     <div id="teclado"></div>
     <div id="mensagem"></div>
     <button id="novo-jogo">Novo Jogo</button>
