--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -35,8 +35,7 @@
                     </div>
 
                     <div class="ancoras">
-                        <a href="#">Esqueceu a senha?</a>
-                        <a href="cadastro.html">Não possui Cadastro?</a>
+                        <a href="cadastro.html"class="destaque-cadastro">Não possui Cadastro?</a>
                     </div>
 
                     <button type="submit" class="avançar">Avançar</button>
